fix in navigation on tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1648,11 +1648,20 @@ footer .widget.profile .twitter span {
     /* NAV */
 
 
+
+    .widget.extendednavigation .bk-overlay {
+      width: 200px;
+      height: 85px;
+      float: right;
+      top: -85px !important;
+      left: 90% !important;
+  }
+
+
     .widget.extendednavigation {
         display: block;
-        width: 50px;
-        height: 50px;
-        margin-top: 0;
+        width: 100%;
+        margin-top: 16px;
     }
 
      /* NAV ICON */
@@ -1661,7 +1670,7 @@ footer .widget.profile .twitter span {
     display: block;
     width: 100%;
     position: absolute;
-    top: 19px;
+    top: -50px;
   }
 
     .widget .extendednavigation a.pull:after {
